--- a/templates/index.html
+++ b/templates/index.html
@@ -97,13 +97,10 @@
   border-left: 1pt Black solid;
 }
 
-.chatbox {
-height:4em;
-width:100%;
-border:1px solid;
-padding:2px;
-margin-top:5px;
-overflow:auto;
+.pad_button_numeric
+{
+height: 30pt;
+width: 30pt;
 }
 </STYLE> <SCRIPT SRC="/cgi/sudoku/ncross.js"></SCRIPT>
 	 <LINK REL="stylesheet" HREF="/jqueryui/jquery-ui.css"> <SCRIPT SRC="//code.jquery.com/jquery-1.10.2.js"></SCRIPT> <SCRIPT SRC="/jqueryui/jquery-ui.js"></SCRIPT> <SCRIPT
@@ -636,8 +633,6 @@ for (var x = 0 ; x <= 8; x++)
 }
    
 </SCRIPT> 
-
-
 <!--start dialogs jqueryui--><SCRIPT>
 //start dialogs and turn off
 $(function() {
@@ -651,49 +646,25 @@ $(function() {
       }
     });
   });
- 
-</SCRIPT><SCRIPT>
- 
+
 function howtoplay ()
  {
  $( '#dialog-message' ).dialog( "open" );
 $( "#dialog-message" ).dialog( "option", "width", 800 );   
  };
- 
-</SCRIPT>
-	 <!--start Statistics dialog jqueryui-->
-	 <SCRIPT>
-  
+
 function Statistics ()
  {
  $( '#Statistics' ).dialog( "open" );
 $( "#Statistics" ).dialog( "option", "width", 800 );   
  };
- 
-</SCRIPT><!--start Solutions dialog jqueryui-->
-	 <SCRIPT>
- 
+
 function SolutionsDialog()
  {
  $( '#SolutionDialog' ).dialog( "open" );
 $( "#SolutionDialog" ).dialog( "option", "width", 800 );   
  };
- 
-</SCRIPT><SCRIPT>
-//start dialogs and turn off
-$(function() {
-    $( ".dialogs" ).dialog({
-        autoOpen: false,
-      modal: true,
-      buttons: {
-        Ok: function() {
-          $( this ).dialog( "close" );
-        }
-      }
-    });
-  });
- 
-</SCRIPT> 
+ </SCRIPT> 
 	 <DIV ID="dialog-message" TITLE="How do I play?" CLASS="dialogs"
 	 STYLE="width:100%;"> 
 		<P>Suduku Rules:</P> 
@@ -727,7 +698,7 @@ $(function() {
 		HREF="#"
 		TITLE="This rating is based on algorithms used to generate this puzzle and may not be reflected in actual gameplay.">%difficulty%</A></B>
 		%globalstring%</DIV> 
-	 <DIV ID="SolutionDialog" STYLE="dialogs"> 
+	 <DIV ID="SolutionDialog" STYLE="" CLASS="dialogs" TITLE="Solution"> 
 		<TABLE CLASS="bigtable" CELLSPACING="0" CELLPADDING="0" ALIGN="CENTER"> 
 		  <TR> 
 			 <TD> 
@@ -1059,116 +1030,101 @@ $(function() {
 				  </TR> 
 				</TABLE></TD> 
 		  </TR> 
-		</TABLE> </DIV>
+		</TABLE> 
+		<DIV ALIGN="CENTER"> 
+		  <FORM ID="Solution"> 
+			 <TABLE ALIGN="CENTER"> 
+				<TBODY> 
+				  <TR VALIGN="MIDDLE"> 
+					 <TD VALIGN="middle" ALIGN="CENTER" COLSPAN="3">Sudoku
+						Solver</TD> 
+				  </TR> 
+				  <TR VALIGN="MIDDLE"> 
+					 <TD VALIGN="middle" ALIGN="LEFT" COLSPAN="3">If the grid below
+						is not complete, the puzzle is not solvable and there is a bug in our program..
+						Please notify us.at <A HREF="http://www.emogic.com/contact"
+						TARGET="_blank">http://www.emogic.com/contact</A></TD> 
+				  </TR> 
+				  <TR VALIGN="MIDDLE"> 
+					 <TD ALIGN="RIGHT">
+						<INPUT TYPE="BUTTON" ONCLICK="start_cross(this.form);" VALUE="Calculate 
+ Answer" ID="answerbutton"><BR><TEXTAREA ID="map" NAME="map" ONKEYUP="start_cross(this.form);" ONCHANGE="start_cross(this.form);" ROWS="10" COLS="10">%jscalcpuzz%
+</TEXTAREA></TD> 
+					 <TD ID="result_here" CLASS="num_cross" COLSPAN="2"
+					 ALIGN="LEFT">&nbsp;</TD> 
+				  </TR> 
+				</TBODY> 
+			 </TABLE> </FORM></DIV> </DIV>
 	 <!--end  dialogs jqueryui-->
-	 <TABLE CELLPADDING="3" CELLSPACING="0" BGCOLOR="#FFFFFF" BORDER="1"
-	 ALIGN="CENTER"> 
-		<TR> 
-		  <TD> 
-			 <FORM><INPUT TYPE="BUTTON" NAME="Button1" VALUE="How do I play"
-				ONCLICK="howtoplay();"></FORM> </TD> 
-		  <TD> 
-			 <FORM><INPUT TYPE="BUTTON" NAME="Button5"
-				VALUE="Create another Sudoku"
-				ONCLICK="if (confirm('Are you sure? Be sure to bookmark the current puzzle first.')) {window.open('%scripturl%/','_self');}
-else{};"></FORM></TD>
-		  
-		  <TD> 
-			 <FORM><INPUT TYPE="BUTTON" NAME="Button2"
-				VALUE="Other Sudoku Puzzles"
-				ONCLICK="if (confirm('Are you sure? Be sure to bookmark the current puzzle first.')) {window.open('/sudoku/common/','_self');}
-else{};"></FORM></TD>
-		  
-		</TR> 
-		<TR> 
-		  <TD COLSPAN="3"> 
-			 <P ALIGN="CENTER">Your puzzle has been archived at:
-				<A HREF="%archiveurl%/%uid%/%game%">%archiveurl%/%uid%/%game%/</A></P></TD> 
-		</TR> 
-	 </TABLE> 
-	 <DIV ALIGN="CENTER"> 
-		<FORM> 
-		  <P><INPUT TYPE="BUTTON" NAME="Button6" VALUE="Statistics"
-			 ONCLICK="Statistics();"></P></FORM></DIV> 
-	 <P>cookie imports export / save</P> 
-	 <P>reset board fix</P> 
-	 <P>better layout</P> 
-	 <P>auto size? size fix</P> 
-	 <P>stats button</P> 
-	 <P>lock unlock button</P> 
-	 <P>pop up show?</P> 
-	 <P>modernize as per rules css!</P> 
-	 <DIV ID="fbhide3" ALIGN="CENTER"> </DIV> 
-	 <FORM><INPUT TYPE="BUTTON" NAME="Button4" VALUE="Grid Bigger"
-		ONCLICK="MakeBigger();"></FORM> 
-	 <FORM><INPUT TYPE="BUTTON" NAME="Button4" VALUE="Grid Smaller"
-		ONCLICK="MakeSmaller();"></FORM> 
-	 <DIV ALIGN="CENTER"> 
-		<DIV STYLE="display: inline;"> 
-		  <FORM STYLE="display: inline;">
-			 <INPUT TYPE="BUTTON" NAME="Button3" VALUE="How am I doing?"
-			 ONCLICK="keyinput(LastCursorID , 72);"> </FORM></DIV> 
-		<DIV STYLE="display: inline"> 
-		  <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-			 VALUE="Reveal Bad Choices" ONCLICK="keyinput(LastCursorID , 82);"></FORM></DIV>
-		</DIV> 
-	 <DIV ALIGN="CENTER"> 
-		<DIV STYLE="display: inline;"> 
-		  <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-			 VALUE="Clear Cell" ONCLICK="keyinput(LastCursorID , 67);"></FORM></DIV> 
-		<DIV STYLE="display: inline"> 
-		  <FORM STYLE="display: inline;">
-			 <INPUT TYPE="HIDDEN" NAME="uid" VALUE="%uid%"><INPUT TYPE="HIDDEN" NAME="game"
-			 VALUE="%game%"><INPUT TYPE="HIDDEN" NAME="name" VALUE="%name%"><INPUT
-			 TYPE="SUBMIT" VALUE="Clear Unlocked Cells"
-			 ONCLICK="if (confirm('Are you sure? This will clear the board of all numbers that are not locked.')) {ClearUnlockedCells();}else{return false;}">
-			 </FORM></DIV> </DIV> 
-	 <DIV ALIGN="CENTER"> 
-		<FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-		  VALUE="Lock/Unlock" ONCLICK="keyinput(LastCursorID , 83);"></FORM></DIV> 
-	 <TABLE BORDER="1" ALIGN="CENTER"> 
-		<TR> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="1" ONCLICK="keyinput(LastCursorID , 49);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="2" ONCLICK="keyinput(LastCursorID , 50);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="3" ONCLICK="keyinput(LastCursorID , 51);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		</TR> 
-		<TR> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="4" ONCLICK="keyinput(LastCursorID , 52);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="5" ONCLICK="keyinput(LastCursorID , 53);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="6" ONCLICK="keyinput(LastCursorID , 54);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		</TR> 
-		<TR> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="7" ONCLICK="keyinput(LastCursorID , 55);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="8" ONCLICK="keyinput(LastCursorID , 56);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		  <TD> 
-			 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON" NAME="Button1"
-				VALUE="9" ONCLICK="keyinput(LastCursorID , 57);"
-				STYLE="width:20pt; height: 20pt;"></FORM></TD> 
-		</TR> 
+	 <TABLE BORDER="0" ALIGN="CENTER">
+		<TR>
+		  <TD ALIGN="CENTER">
+			 <DIV> 
+				<FORM>
+				  <INPUT TYPE="BUTTON" NAME="Button3" VALUE="How am I doing?"
+				  ONCLICK="keyinput(LastCursorID , 72);"> </FORM></DIV>
+			 <DIV> 
+				<FORM><INPUT TYPE="BUTTON" NAME="Button1"
+				  VALUE="Reveal Bad Choices"
+				  ONCLICK="keyinput(LastCursorID , 82);"></FORM></DIV></TD>
+		  <TD>
+			 <TABLE BORDER="1" ALIGN="CENTER"> 
+				<TR> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="1" ONCLICK="keyinput(LastCursorID , 49);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="2" ONCLICK="keyinput(LastCursorID , 50);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="3" ONCLICK="keyinput(LastCursorID , 51);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				</TR> 
+				<TR> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="4" ONCLICK="keyinput(LastCursorID , 52);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="5" ONCLICK="keyinput(LastCursorID , 53);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="6" ONCLICK="keyinput(LastCursorID , 54);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				</TR> 
+				<TR> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="7" ONCLICK="keyinput(LastCursorID , 55);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="8" ONCLICK="keyinput(LastCursorID , 56);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				  <TD> 
+					 <FORM STYLE="display: inline;"><INPUT TYPE="BUTTON"
+						NAME="Button1" VALUE="9" ONCLICK="keyinput(LastCursorID , 57);"
+						CLASS="pad_button_numeric"></FORM></TD> 
+				</TR> 
+			 </TABLE></TD>
+		  <TD ALIGN="CENTER">
+			 <DIV> 
+				<FORM><INPUT TYPE="BUTTON" NAME="Button1" VALUE="Lock/Unlock"
+				  ONCLICK="keyinput(LastCursorID , 83);"></FORM></DIV>
+			 <DIV> 
+				<FORM><INPUT TYPE="BUTTON" NAME="Button1" VALUE="Clear Cell"
+				  ONCLICK="keyinput(LastCursorID , 67);"></FORM></DIV>
+			 <DIV> 
+				<FORM>
+				  <INPUT TYPE="SUBMIT" VALUE="Clear Unlocked Cells"
+				  ONCLICK="if (confirm('Are you sure? This will clear the board of all numbers that are not locked.')) {ClearUnlockedCells();}else{return false;}">
+				  </FORM></DIV></TD>
+		</TR>
 	 </TABLE> 
 	 <TABLE CLASS="bigtable" CELLSPACING="0" CELLPADDING="0"
 	 ONCLICK="intable = 1;" ALIGN="CENTER"> 
@@ -1505,39 +1461,55 @@ else{};"></FORM></TD>
 	 </TABLE> 
 	 <DIV ALIGN="CENTER"> 
 		<FORM> 
-		  <P><INPUT TYPE="BUTTON" NAME="Button7" VALUE="Solutions"
+		  <P><INPUT TYPE="BUTTON" NAME="Button7" VALUE="Solution"
 			 ONCLICK="SolutionsDialog();"></P></FORM></DIV> 
-	 <P ALIGN="CENTER"><A HREF="#" ONCLICK='showID("Solution");'>Show</A> or
-		<A HREF="#" ONCLICK='hideID("Solution");'>Hide</A> Sudoku Solution</P> 
-	 <FORM ID="Solution"> 
-		<TABLE ALIGN="CENTER"> 
-		  <TBODY> 
-			 <TR VALIGN="MIDDLE"> 
-				<TD VALIGN="middle" ALIGN="CENTER" COLSPAN="3">Sudoku Solver</TD> 
-			 </TR> 
-			 <TR VALIGN="MIDDLE"> 
-				<TD VALIGN="middle" ALIGN="LEFT" COLSPAN="3">If the grid below is
-				  not complete, the puzzle is not solvable and there is a bug in our program..
-				  Please notify us.at <A HREF="http://www.emogic.com/contact"
-				  TARGET="_blank">http://www.emogic.com/contact</A></TD> 
-			 </TR> 
-			 <TR VALIGN="MIDDLE"> 
-				<TD ALIGN="RIGHT">
-				  <INPUT TYPE="BUTTON" ONCLICK="start_cross(this.form);" VALUE="Calculate 
- Answer" ID="answerbutton"><BR><TEXTAREA ID="map" NAME="map" ONKEYUP="start_cross(this.form);" ONCHANGE="start_cross(this.form);" ROWS="10" COLS="10">%jscalcpuzz%
-</TEXTAREA></TD> 
-				<TD ID="result_here" CLASS="num_cross" COLSPAN="2"
-				ALIGN="LEFT">&nbsp;</TD> 
-			 </TR> 
-		  </TBODY> 
-		</TABLE> </FORM> 
 	 <FORM METHOD="GET"> 
 		<P ALIGN="CENTER"><INPUT TYPE="HIDDEN" NAME="uid" VALUE="%uid%"><INPUT
 		  TYPE="HIDDEN" NAME="game" VALUE="%game%"><INPUT TYPE="HIDDEN"
 		  NAME="name" VALUE="%name%"><INPUT TYPE="SUBMIT"
 		  VALUE="Restart this Sudoku Board"
-		  ONCLICK="if (confirm('Are you sure? This will clear the board of all numbers and clear the chat.')) {DeleteCookies();location.reload();}">
+		  ONCLICK="if (confirm('Are you sure? This will clear the board of all numbers.')) {DeleteCookies();location.reload();}">
 		  </P> </FORM> 
+	 <DIV ALIGN="CENTER"> 
+		<FORM> 
+		  <P><INPUT TYPE="BUTTON" NAME="Button6" VALUE="Puzzle Statistics"
+			 ONCLICK="Statistics();"></P></FORM></DIV>
+	 <TABLE CELLPADDING="3" CELLSPACING="0" BGCOLOR="#FFFFFF" BORDER="0"
+	 ALIGN="CENTER"> 
+		<TR> 
+		  <TD> 
+			 <FORM><INPUT TYPE="BUTTON" NAME="Button1" VALUE="How do I play"
+				ONCLICK="howtoplay();"></FORM> </TD> 
+		  <TD> 
+			 <FORM><INPUT TYPE="BUTTON" NAME="Button5"
+				VALUE="Create another Sudoku"
+				ONCLICK="if (confirm('Are you sure? Be sure to bookmark the current puzzle first.')) {window.open('%scripturl%/','_self');}
+else{};"></FORM></TD>
+		  
+		  <TD> 
+			 <FORM><INPUT TYPE="BUTTON" NAME="Button2"
+				VALUE="Other Sudoku Puzzles"
+				ONCLICK="if (confirm('Are you sure? Be sure to bookmark the current puzzle first.')) {window.open('/sudoku/common/','_self');}
+else{};"></FORM></TD>
+		  
+		</TR> 
+	 </TABLE> 
+	 <FORM><INPUT TYPE="BUTTON" NAME="Button4" VALUE="Grid Bigger"
+		ONCLICK="MakeBigger();"></FORM> 
+	 <FORM><INPUT TYPE="BUTTON" NAME="Button4" VALUE="Grid Smaller"
+		ONCLICK="MakeSmaller();"></FORM> 
+		
+		<!--
+	 <P ALIGN="CENTER">Your puzzle has been archived at:
+		<A HREF="%archiveurl%/%uid%/%game%">%archiveurl%/%uid%/%game%/</A></P> 
+		-->
+	 <P>cookie imports export / save</P> 
+	 <P>reset board fix</P> 
+	 <P>better layout</P> 
+	 <P>auto size? size fix</P> 
+	 <P>lock unlock button</P> 
+	 <P>modernize as per rules css!</P> 
+	 <P>folders for difficulties!</P> 
 		  
 
 		  
@@ -1607,8 +1579,6 @@ tt.href = window.location.href;
 -->
 <!--FB share end-->
 	 <SCRIPT>
-//hideID("fbhide3");		  
-	hideID("Solution");
 FindStatic();
 ColorStatic();
 choose('cell_0_0'); 
